Implement mobile navigation with hamburger menu and enhance sidebar functionality

--- a/productivity-simple/index.html
+++ b/productivity-simple/index.html
@@ -11,8 +11,19 @@
   </head>
   <body>
     <div id="app">
+      <!-- Hamburger Menu Button (Mobile) -->
+      <button
+        class="hamburger"
+        id="hamburger"
+        onclick="window._nav?.toggle?.()"
+      >
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
       <!-- Navigation Sidebar -->
-      <nav>
+      <nav id="nav">
         <div class="brand">
           <div class="brand-ico">⚡</div>
           <h1>Focus</h1>
