--- a/productivity-simple/index.html
+++ b/productivity-simple/index.html
@@ -89,6 +89,16 @@
         <!-- TODOS PAGE -->
         <div id="page-todos" class="page">
           <div class="ph"><h2>Todos</h2></div>
+          <div class="todo-toolbar">
+            <input class="search-input" id="todo-search" placeholder="Search tasks…" oninput="window._todos?.search?.()" />
+            <select id="todo-filter" onchange="window._todos?.applyFilter?.()">
+              <option value="all">All</option>
+              <option value="active">Active</option>
+              <option value="done">Done</option>
+              <option value="high">High priority</option>
+              <option value="overdue">Overdue</option>
+            </select>
+          </div>
           <div id="tlist"></div>
         </div>
 
@@ -250,6 +260,21 @@
               <div class="val" id="exp-count">0</div>
             </div>
           </div>
+          <div class="card exp-budget" id="exp-budget-bar" style="margin-bottom:18px;padding:14px 18px">
+            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
+              <span style="font-size:13px;font-weight:600;color:var(--t2)">Monthly budget</span>
+              <div style="display:flex;align-items:center;gap:6px">
+                <span style="font-size:12px;color:var(--t3)">$</span>
+                <input type="number" id="exp-budget-input" min="0" step="10" placeholder="Set limit…"
+                  style="width:90px;font-size:13px;font-weight:700;color:var(--primary);background:transparent;border:none;border-bottom:1px solid var(--border);padding:2px 4px;text-align:right"
+                  oninput="window._expenses?.setBudget?.()" />
+              </div>
+            </div>
+            <div style="height:6px;border-radius:999px;background:var(--border);overflow:hidden">
+              <div id="exp-budget-fill" style="height:100%;border-radius:999px;background:linear-gradient(90deg,var(--green),var(--primary));transition:width 0.4s,background 0.3s;width:0%"></div>
+            </div>
+            <div id="exp-budget-msg" style="font-size:11.5px;color:var(--t3);margin-top:5px"></div>
+          </div>
           <div class="exp-body">
             <div class="card chart-box">
               <h4>By Category</h4>
@@ -267,6 +292,7 @@
         <!-- NOTES PAGE -->
         <div id="page-notes" class="page">
           <div class="ph"><h2>Notes</h2></div>
+          <input class="search-input" id="note-search" placeholder="Search notes…" oninput="window._notes?.search?.()" style="margin-bottom:14px" />
           <div class="notes-layout">
             <div class="notes-list" id="notes-list"></div>
             <div
@@ -720,6 +746,54 @@
           <button class="btn btn-p" onclick="window._grocery?.create?.()">
             Add to list
           </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- EDIT TODO MODAL -->
+    <div id="mt-edit" class="mbk">
+      <div class="modal">
+        <h3>Edit Task</h3>
+        <div class="f">
+          <label>Title</label>
+          <input type="text" id="ttitle-edit" placeholder="What needs to be done?" />
+        </div>
+        <div class="f">
+          <label>Priority</label>
+          <select id="tpri-edit">
+            <option value="none">None</option>
+            <option value="low">Low</option>
+            <option value="medium">Medium</option>
+            <option value="high">High</option>
+          </select>
+        </div>
+        <div class="f">
+          <label>Due Date</label><input type="date" id="tdue-edit" />
+        </div>
+        <input type="hidden" id="tedit-id" />
+        <div class="ma">
+          <button class="btn btn-g" onclick="window._utils?.closeModal?.()">Cancel</button>
+          <button class="btn btn-p" onclick="window._todos?.saveEdit?.()">Save</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- EDIT HABIT MODAL -->
+    <div id="mh-edit" class="mbk">
+      <div class="modal">
+        <h3>Edit Habit</h3>
+        <div class="f">
+          <label>Name</label>
+          <input type="text" id="hname-edit" placeholder="e.g. Read 20 min" />
+        </div>
+        <div class="f">
+          <label>Colour</label>
+          <div class="swatches" id="hswatches-edit"></div>
+        </div>
+        <input type="hidden" id="hedit-id" />
+        <div class="ma">
+          <button class="btn btn-g" onclick="window._utils?.closeModal?.()">Cancel</button>
+          <button class="btn btn-p" onclick="window._habits?.saveEdit?.()">Save</button>
         </div>
       </div>
     </div>
