feat: update contact form to use mailto link for email submissions

--- a/index.html
+++ b/index.html
@@ -597,6 +597,8 @@
               </p>
             </details>
           </div>
+        </div>
+
         <!-- GAMES PAGE -->
         <div id="page-games" class="page">
           <div class="ph"><h2>Game Backlog</h2></div>
