--- a/icons/generate-icons.html
+++ b/icons/generate-icons.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head><title>Generate PWA Icons</title></head>
-<body>
-<p>Generating icons... check your Downloads folder.</p>
-<canvas id="c"></canvas>
-<script>
-  const svg = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+    <head>
+        <title>Generate PWA Icons</title>
+    </head>
+    <body>
+        <p>Generating icons... check your Downloads folder.</p>
+        <canvas id="c"></canvas>
+        <script>
+            const svg = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
     <defs>
       <linearGradient id="g" x1="0%" y1="0%" x2="100%" y2="100%">
         <stop offset="0%" stop-color="#5b6ef5"/>
@@ -16,38 +18,39 @@
     <polygon points="288,48 144,288 240,288 224,464 368,224 272,224" fill="white"/>
   </svg>`;
 
-  const blob = new Blob([svg], { type: 'image/svg+xml' });
-  const url = URL.createObjectURL(blob);
-  const img = new Image();
+            const blob = new Blob([svg], { type: 'image/svg+xml' });
+            const url = URL.createObjectURL(blob);
+            const img = new Image();
 
-  img.onload = () => {
-    [192, 512].forEach(size => {
-      const canvas = document.getElementById('c');
-      canvas.width = size;
-      canvas.height = size;
-      const ctx = canvas.getContext('2d');
-      ctx.drawImage(img, 0, 0, size, size);
-      const a = document.createElement('a');
-      a.download = `icon-${size}.png`;
-      a.href = canvas.toDataURL('image/png');
-      a.click();
-    });
+            img.onload = () => {
+                [192, 512].forEach((size) => {
+                    const canvas = document.getElementById('c');
+                    canvas.width = size;
+                    canvas.height = size;
+                    const ctx = canvas.getContext('2d');
+                    ctx.drawImage(img, 0, 0, size, size);
+                    const a = document.createElement('a');
+                    a.download = `icon-${size}.png`;
+                    a.href = canvas.toDataURL('image/png');
+                    a.click();
+                });
 
-    // Apple touch icon (180x180)
-    const canvas = document.getElementById('c');
-    canvas.width = 180;
-    canvas.height = 180;
-    const ctx = canvas.getContext('2d');
-    ctx.drawImage(img, 0, 0, 180, 180);
-    const a = document.createElement('a');
-    a.download = 'apple-touch-icon.png';
-    a.href = canvas.toDataURL('image/png');
-    a.click();
+                // Apple touch icon (180x180)
+                const canvas = document.getElementById('c');
+                canvas.width = 180;
+                canvas.height = 180;
+                const ctx = canvas.getContext('2d');
+                ctx.drawImage(img, 0, 0, 180, 180);
+                const a = document.createElement('a');
+                a.download = 'apple-touch-icon.png';
+                a.href = canvas.toDataURL('image/png');
+                a.click();
 
-    document.querySelector('p').textContent = '✅ Done! Move icon-192.png, icon-512.png and apple-touch-icon.png into the /icons/ folder of your project.';
-  };
+                document.querySelector('p').textContent =
+                    '✅ Done! Move icon-192.png, icon-512.png and apple-touch-icon.png into the /icons/ folder of your project.';
+            };
 
-  img.src = url;
-</script>
-</body>
+            img.src = url;
+        </script>
+    </body>
 </html>
